--- a/src/components/filter/expert/styles-expert-filter.css
+++ b/src/components/filter/expert/styles-expert-filter.css
@@ -1,3 +1,9 @@
+/**
+ * Copyright (c) 2024, RTE (http://www.rte-france.com)
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/.
+ */
 /* Fork from react-querybuilder/dist/query-builder.css */
 .ruleGroup {
     display: flex;
